# elluel

./: .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml
elluel/: audio.py  config.py  shell.py
tests/: strategies.py  test_audio.py  test_config.py  test_elluel.py
