[tool.poetry]
name = "elluel"
version = "0.1.0"
description = ""
authors = ["skippi <jbtcao@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/skippi/elluel"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
mutagen = "^1.42"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
pylint = "^2.3"
hypothesis = "^4.35"

[tool.poetry.scripts]
elluel = 'elluel.shell:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
